# monkey-magic

./: README.md  README.rst  conftest.py  monkey_magic.py  pyproject.toml  test_monkey_magic.py
.github/workflows/: test.yml
